<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Music Structure App</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_tracks">Speed Music</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_albums">Albums</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_chart">Top Charts</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_genres">Genres</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_playerList">Playlist</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_player">Now Playing</string>

</resources>
